Fix styling for menu items to show on navbar when menu icon is not visible

--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -70,7 +70,6 @@ $laptop: 1290px;
         color: white;
         text-decoration: none;
         cursor: pointer;
-
       }
     }
   }
@@ -80,7 +79,6 @@ $laptop: 1290px;
     margin: auto 0;
     padding: 10px;
     display: inline;
-    height: 60px;
     width: 60px;
     z-index: 2;
 
@@ -95,7 +93,7 @@ $laptop: 1290px;
     display: none;
     ul {
       list-style: none;
-      margin-top: 0;//16px;
+      margin-top: 0;
       height: 40px;
       li {
         height: 60px;
@@ -115,7 +113,7 @@ $laptop: 1290px;
 
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $laptop){
       display: inline;
     }
   }
